src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsF-dwU-dhU-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width {  }\n    default-window-height {  }\n}"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 0, bounds: 1280 × 720, states: []
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
